<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.przybylskik.stachn.notowaniaakcjifirm.fragments.StocksFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akcje"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonPobracDane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pobra_dane"
        android:layout_marginRight="6dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginEnd="6dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skr_t_firmy"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/editTextNazwaFirmy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/np_aapl"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/buttonPobracDane"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/editTextNazwaFirmy"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/textViewNapisData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNazwaFirmy" />

    <TextView
        android:id="@+id/textViewNapisOtwarcie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otwarcie"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisData"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewNapisZamkniecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zamkni_cie"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisOtwarcie"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewNapisMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/znaczenie_minimalnie"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisRoznicz" />

    <TextView
        android:id="@+id/textViewNapisMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/znaczenie_maksymalnie"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisMin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewNapisWolumien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wolumie_obrot_w"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNazwaFirmy" />

    <TextView
        android:id="@+id/textViewOtwarcie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewData"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textViewZamkniecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewOtwarcie"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textViewMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoznica" />

    <TextView
        android:id="@+id/textViewMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMin" />

    <TextView
        android:id="@+id/textViewWolumien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMax" />

    <TextView
        android:id="@+id/textViewNapisRoznicz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_nica"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNapisZamkniecie"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewRoznica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puste"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewZamkniecie"
        app:layout_constraintLeft_toRightOf="@+id/textViewNapisMax"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
